--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Gallery</title>
+		<title>dEb's Easel</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><img src="images/Logo.png" height="30" alt="" />
-						dEb's easel</a>
+						<a href="index.html" class="logo"><img src="images/logo.png" height="30" alt="" />
+							dEb's Easel</a>
 					</header>
 
 				<!-- Nav -->
@@ -53,10 +53,10 @@
 										<div class="col-3"><span class="image fit"><img src="images/a3.jpg" alt="hello test" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/a4.jpg" alt="hello test" /></span></div>
 
-										<div class="col-3"><p><b>"Title"</b><br />Medium, 40" x 40"<br />$40</p></div>
-										<div class="col-3"><p><b>"Title"</b><br />Medium, 40" x 40"<br />$40</p></div>
-										<div class="col-3"><p><b>"Title"</b><br />Medium, 40" x 40"<br />$40</p></div>
-										<div class="col-3"><p><b>"Title"</b><br />Medium, 40" x 40"<br />$40</p></div>
+										<div class="col-3"><p><b><i>Rain</i></b><br />Acrylic, 24" x 24"<br />$120 SOLD</p></div>
+										<div class="col-3"><p><b><i>Flowing Waters</i></b><br />Acrylic, 20" x 10" (3 piece)<br />$100 SOLD</p></div>
+										<div class="col-3"><p><b><i>Bravo</i></b><br />Acrylic, 15" x 12"<br />$50 SOLD</p></div>
+										<div class="col-3"><p><b><i>Exuberant</i></b><br />Acrylic and Resin, 9.5" x 8"<br />$50 SOLD</p></div>
 									</div>
 								</div>
 								<hr />
@@ -69,18 +69,18 @@
 										<div class="col-3"><span class="image fit"><img src="images/n3.jpg" alt="hello test" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n6.jpg" alt="hello test" /></span></div>
 
-										<div class="col-3"><p><b>"Title"</b><br />Medium, 40" x 40"<br />$40</p></div>
-										<div class="col-3"><p><b>"Title"</b><br />Medium, 40" x 40"<br />$40</p></div>
-										<div class="col-3"><p><b>"Title"</b><br />Medium, 40" x 40"<br />$40</p></div>
-										<div class="col-3"><p><b>"Title"</b><br />Medium, 40" x 40"<br />$40</p></div>
+										<div class="col-3"><p><b><i>Sleepy Town</i></b><br />Acrylic, 20" x 10"<br />$40 SOLD</p></div>
+										<div class="col-3"><p><b><i>Blustery Day</i></b><br />Acrylic, 22" x 12"<br />$120 SOLD</p></div>
+										<div class="col-3"><p><b><i>Spring Has Sprung</i></b><br />Acrylic, 20" x 10"<br />$50</p></div>
+										<div class="col-3"><p><b><i>Nature</i></b><br />Acrylic, 20" x 10"<br />$50</p></div>
 
 										<div class="col-4"><span class="image fit"><img src="images/n5.jpg" alt="hello test" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/n7.jpg" alt="hello test" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/n8.png" alt="hello test" /></span></div>
 
-										<div class="col-4"><p><b>"Title"</b><br />Medium, 40" x 40"<br />$40</p></div>
-										<div class="col-4"><p><b>"Title"</b><br />Medium, 40" x 40"<br />$40</p></div>
-										<div class="col-4"><p><b>"Title"</b><br />Medium, 40" x 40"<br />$40</p></div>
+										<div class="col-4"><p><b><i>Upstream</i></b><br />Acrylic, 12" x 12"<br />$30 SOLD</p></div>
+										<div class="col-4"><p><b><i>Look Up. Way Up.</i></b><br />Acrylic, 12" x 12"<br />$50</p></div>
+										<div class="col-4"><p><b><i>Be Patient</i></b><br />Acrylic, 12" x 12"<br />$50 SOLD</p></div>
 									</div>
 								</div>
 							</section>
@@ -112,14 +112,14 @@
 					</section>
 					<section class="split contact">
 						<section class="alt">
-							<h3>Thank you for your interest!</h3>
+							<h2>Thank you for your interest!</h2>
 						</section>
 						<section>
-							<h3>Phone</h3>
+							<h2>Phone</h2>
 							<p><a href="#">(780)-499-5452 (text)</a></p>
 						</section>
 						<section>
-							<h3>Email</h3>
+							<h2>Email</h2>
 							<p><a href="#">dlpete.art4@gmail.com</a></p>
 						</section>
 						<section>
@@ -129,9 +129,10 @@
 				</footer>
 
 				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Deb Peterson Art</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+				<div id="copyright">
+					<ul><li>&copy; Deb Peterson Art</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>Background by: <a href="https://unsplash.com/photos/sp-p7uuT0tw">Sebastian Unrau</a></li></ul>
+				</div>
 
 			</div>
 
