--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>dEbs easel</title>
+		<title>dEb's Easel</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<img src="images/Logo.png" height="400" alt="" />
-						<h1>dEb's easel<br />
+						<h1>dEb's Easel<br />
 						</h1>
 						<p>Local Edmonton Artist.</p>
 						<ul class="actions">
@@ -30,8 +30,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><img src="images/Logo.png" height="30" alt="" />
-							dEb's easel</a>
+						<a href="index.html" class="logo"><img src="images/logo.png" height="30" alt="" />
+							dEb's Easel</a>
 					</header>
 
 				<!-- Nav -->
@@ -96,14 +96,14 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Thank you for your interest!</h3>
+								<h2>Thank you for your interest!</h2>
 							</section>
 							<section>
-								<h3>Phone</h3>
+								<h2>Phone</h2>
 								<p><a href="#">(780)-499-5452 (text)</a></p>
 							</section>
 							<section>
-								<h3>Email</h3>
+								<h2>Email</h2>
 								<p><a href="#">dlpete.art4@gmail.com</a></p>
 							</section>
 							<section>
@@ -113,9 +113,10 @@
 					</footer>
 
 				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Deb Peterson Art</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+				<div id="copyright">
+					<ul><li>&copy; Deb Peterson Art</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>Background by: <a href="https://unsplash.com/photos/sp-p7uuT0tw">Sebastian Unrau</a></li></ul>
+				</div>
 
 			</div>
 
