Added abstract artwork
Added to gallery

--- a/generic.html
+++ b/generic.html
@@ -48,14 +48,40 @@
 								<h2><a id="abstract collection">Abstract Collection</a></h2>
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
+										<div class="col-3"><span class="image fit"><img src="images/a7.jpeg" alt="hello test" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a8.JPG" alt="hello test" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a9.jpeg" alt="hello test" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a14.JPG" alt="hello test" /></span></div>
+
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+
+										<div class="col-4"><span class="image fit"><img src="images/a12.JPG" alt="hello test" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a2.jpg" alt="hello test" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a13.jpeg" alt="hello test" /></span></div>
+
+										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
+										<div class="col-4"><p><b><i>Flowing Waters</i></b><br />Acrylic, 20" x 10" (3 piece)<br />$100 SOLD</p></div>
+										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
+
+										<div class="col-4"><span class="image fit"><img src="images/a5.jpg" alt="hello test" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a6.jpeg" alt="hello test" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a10.jpeg" alt="hello test" /></span></div>
+
+										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
+										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
+										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
+
 										<div class="col-3"><span class="image fit"><img src="images/a1.jpg" alt="hello test" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a2.jpg" alt="hello test" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/a3.jpg" alt="hello test" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a11.JPG" alt="hello test" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/a4.jpg" alt="hello test" /></span></div>
 
 										<div class="col-3"><p><b><i>Rain</i></b><br />Acrylic, 24" x 24"<br />$120 SOLD</p></div>
-										<div class="col-3"><p><b><i>Flowing Waters</i></b><br />Acrylic, 20" x 10" (3 piece)<br />$100 SOLD</p></div>
 										<div class="col-3"><p><b><i>Bravo</i></b><br />Acrylic, 15" x 12"<br />$50 SOLD</p></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
 										<div class="col-3"><p><b><i>Exuberant</i></b><br />Acrylic and Resin, 9.5" x 8"<br />$50 SOLD</p></div>
 									</div>
 								</div>
