Added to Gallery
Added more nature artwork

--- a/generic.html
+++ b/generic.html
@@ -48,36 +48,36 @@
 								<h2><a id="abstract collection">Abstract Collection</a></h2>
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
-										<div class="col-3"><span class="image fit"><img src="images/a7.jpeg" alt="hello test" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a8.JPG" alt="hello test" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a9.jpeg" alt="hello test" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a14.JPG" alt="hello test" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a7.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a8.JPG" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a9.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a14.JPG" alt="" /></span></div>
 
 										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
 										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
 										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
 										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
 
-										<div class="col-4"><span class="image fit"><img src="images/a12.JPG" alt="hello test" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/a2.jpg" alt="hello test" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/a13.jpeg" alt="hello test" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a12.JPG" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a2.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a13.jpeg" alt="" /></span></div>
 
 										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
 										<div class="col-4"><p><b><i>Flowing Waters</i></b><br />Acrylic, 20" x 10" (3 piece)<br />$100 SOLD</p></div>
 										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
 
-										<div class="col-4"><span class="image fit"><img src="images/a5.jpg" alt="hello test" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/a6.jpeg" alt="hello test" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/a10.jpeg" alt="hello test" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a5.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a6.jpeg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a10.jpeg" alt="" /></span></div>
 
 										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
 										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
 										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
 
-										<div class="col-3"><span class="image fit"><img src="images/a1.jpg" alt="hello test" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a3.jpg" alt="hello test" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a11.JPG" alt="hello test" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a4.jpg" alt="hello test" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a1.jpg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a3.jpg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a11.JPG" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a4.jpg" alt="" /></span></div>
 
 										<div class="col-3"><p><b><i>Rain</i></b><br />Acrylic, 24" x 24"<br />$120 SOLD</p></div>
 										<div class="col-3"><p><b><i>Bravo</i></b><br />Acrylic, 15" x 12"<br />$50 SOLD</p></div>
@@ -90,20 +90,72 @@
 								<h2><a id="nature collection">Nature Collection</a></h2>
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
-										<div class="col-3"><span class="image fit"><img src="images/n1.jpg" alt="hello test" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/n2.jpg" alt="hello test" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/n3.jpg" alt="hello test" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/n6.jpg" alt="hello test" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/n22.jpeg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/n29.JPG" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/n32.JPG" alt="" /></span></div>
+										<div class="col-4"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-4"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-4"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
 
+										<div class="col-3"><span class="image fit"><img src="images/n10.JPG" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n20.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n13.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n19.JPG" alt="" /></span></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+
+										<div class="col-3"><span class="image fit"><img src="images/n14.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n16.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n17.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n31.jpeg" alt="" /></span></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+
+										<div class="col-2"><span class="image fit"><img src="images/n25.JPG" alt="" /></span></div>
+										<div class="col-2"><span class="image fit"><img src="images/n27.JPG" alt="" /></span></div>
+										<div class="col-2"><span class="image fit"><img src="images/n23.jpeg" alt="" /></span></div>
+										<div class="col-2"><span class="image fit"><img src="images/n28.JPG" alt="" /></span></div>
+										<div class="col-2"><span class="image fit"><img src="images/n30.JPG" alt="" /></span></div>
+										<div class="col-2"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-2"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-2"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-2"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-2"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+
+										<div class="col-3"><span class="image fit"><img src="images/n11.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n18.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n24.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n26.jpeg" alt="" /></span></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+
+										<div class="col-3"><span class="image fit"><img src="images/n9.JPG" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n15.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n12.jpeg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n21.jpeg" alt="" /></span></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+
+										<div class="col-3"><span class="image fit"><img src="images/n1.jpg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n2.jpg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n3.jpg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/n6.jpg" alt="" /></span></div>
 										<div class="col-3"><p><b><i>Sleepy Town</i></b><br />Acrylic, 20" x 10"<br />$40 SOLD</p></div>
 										<div class="col-3"><p><b><i>Blustery Day</i></b><br />Acrylic, 22" x 12"<br />$120 SOLD</p></div>
 										<div class="col-3"><p><b><i>Spring Has Sprung</i></b><br />Acrylic, 20" x 10"<br />$50</p></div>
 										<div class="col-3"><p><b><i>Nature</i></b><br />Acrylic, 20" x 10"<br />$50</p></div>
 
-										<div class="col-4"><span class="image fit"><img src="images/n5.jpg" alt="hello test" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/n7.jpg" alt="hello test" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/n8.png" alt="hello test" /></span></div>
-
+										<div class="col-4"><span class="image fit"><img src="images/n5.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/n7.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/n8.png" alt="" /></span></div>
 										<div class="col-4"><p><b><i>Upstream</i></b><br />Acrylic, 12" x 12"<br />$30 SOLD</p></div>
 										<div class="col-4"><p><b><i>Look Up. Way Up.</i></b><br />Acrylic, 12" x 12"<br />$50</p></div>
 										<div class="col-4"><p><b><i>Be Patient</i></b><br />Acrylic, 12" x 12"<br />$50 SOLD</p></div>
