--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									I look forward to a future where I will continue my lifelong, creative journey."</blockquote>
 								</p>
 								<header class="major">
-									<p><i class="fas fa-paint-brush"></i> Deb Peterson</p>
+									<h3><i class="fas fa-paint-brush"></i> Deb Peterson</h3>
 								</header>
 							</article>
 					</div>
