--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<img src="images/Logo.png" height="400" alt="" />
+						<img src="images/logo.png" height="400" alt="" />
 						<h1>dEb's Easel<br />
 						</h1>
 						<p>Local Edmonton Artist.</p>
