Fixed Logo issue
Fixed logo issue, removed unused photos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<img src="images/logo.png" height="400" alt="" />
+						<img src="images/Logo-real.png height="400" alt="" />
 						<h1>dEb's Easel<br />
 						</h1>
 						<p>Local Edmonton Artist.</p>
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><img src="images/logo.png" height="30" alt="" />
+						<a href="index.html" class="logo"><img src="images/Logo-real.png" height="30" alt="" />
 							dEb's Easel</a>
 					</header>
 
