--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><img src="images/logo.png" height="30" alt="" />
+						<a href="index.html" class="logo"><img src="images/Logo-real.png" height="30" alt="" />
 							dEb's Easel</a>
 					</header>
 
