--- a/generic.html
+++ b/generic.html
@@ -209,7 +209,7 @@
 				<!-- Copyright -->
 				<div id="copyright">
 					<ul><li>&copy; Deb Peterson Art</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-						<li>Background by: <a href="https://unsplash.com/photos/sp-p7uuT0tw">Sebastian Unrau</a></li></ul>
+						<li>Photo by <a href="https://unsplash.com/@tq_photos">T. Q. on Unsplash</a></li></ul>
 				</div>
 
 			</div>
