Added artwork information

--- a/generic.html
+++ b/generic.html
@@ -52,37 +52,45 @@
 										<div class="col-3"><span class="image fit"><img src="images/a8.JPG" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/a9.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/a14.JPG" alt="" /></span></div>
+										<div class="col-3"><p><b><i>Kaleidoscope</i></b><br />Acrylic, 8' x 10'<br />$20</p></div>
+										<div class="col-3"><p><b><i>Intricate</i></b><br />Acrylic and Resin, 8' x 10'<br />$40</p></div>
+										<div class="col-3"><p><b><i>Happy</i></b><br />Acrylic, 8" x 10"<br />$20</p></div>
+										<div class="col-3"><p><b><i>Opposites</i></b><br />Acrylic, 8" x 10"<br />$20</p></div>
 
-										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
-										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
-										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
-										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
-
-										<div class="col-4"><span class="image fit"><img src="images/a12.JPG" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/a2.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/a13.jpeg" alt="" /></span></div>
-
-										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
-										<div class="col-4"><p><b><i>Flowing Waters</i></b><br />Acrylic, 20" x 10" (3 piece)<br />$100 SOLD</p></div>
-										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
+										<div class="col-5"><span class="image fit"><img src="images/a12.JPG" alt="" /></span></div>
+										<div class="col-5"><span class="image fit"><img src="images/a15.jpg" alt="" /></span></div>
+										<div class="col-5"><p><b><i>Beyond</i></b><br />Acrylic, 8" x 10" (2 piece)<br />$40</p></div>
+										<div class="col-5"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
 
 										<div class="col-4"><span class="image fit"><img src="images/a5.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/a6.jpeg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/a10.jpeg" alt="" /></span></div>
-
-										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
-										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
-										<div class="col-4"><p><b><i>Name</i></b><br />Acrylic, 24" x 24"<br />$</p></div>
+										<div class="col-4"><p><b><i>Wonderful World</i></b><br />Acrylic, 8" x 8"<br />$30</p></div>
+										<div class="col-4"><p><b><i>Nature's Wonder</i></b><br />Acrylic, 3' x 3'<br />$380</p></div>
+										<div class="col-4"><p><b><i>Still Light</i></b><br />Acrylic, 20" x 20"<br />$60</p></div>
 
 										<div class="col-3"><span class="image fit"><img src="images/a1.jpg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/a3.jpg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/a11.JPG" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/a4.jpg" alt="" /></span></div>
-
 										<div class="col-3"><p><b><i>Rain</i></b><br />Acrylic, 24" x 24"<br />$120 SOLD</p></div>
 										<div class="col-3"><p><b><i>Bravo</i></b><br />Acrylic, 15" x 12"<br />$50 SOLD</p></div>
-										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Ocean Life</i></b><br />Acrylic, 20" x 10"<br />$40</p></div>
 										<div class="col-3"><p><b><i>Exuberant</i></b><br />Acrylic and Resin, 9.5" x 8"<br />$50 SOLD</p></div>
+
+										<div class="col-3"><span class="image fit"><img src="images/a17.jpg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a19.jpg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a18.jpg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a16.jpg" alt="" /></span></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										
+										<div class="col-5"><span class="image fit"><img src="images/a2.jpg" alt="" /></span></div>
+										<div class="col-5"><span class="image fit"><img src="images/a13.jpeg" alt="" /></span></div>
+										<div class="col-5"><p><b><i>Flowing Waters</i></b><br />Acrylic, 20" x 10" (3 piece)<br />$100 SOLD</p></div>
+										<div class="col-5"><p><b><i>Depth</i></b><br />Acrylic Layers, 20" x 20"<br />$60</p></div>
 									</div>
 								</div>
 								<hr />
@@ -93,71 +101,71 @@
 										<div class="col-4"><span class="image fit"><img src="images/n22.jpeg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/n29.JPG" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/n32.JPG" alt="" /></span></div>
-										<div class="col-4"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
-										<div class="col-4"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
-										<div class="col-4"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-4"><p><b><i>Prarie Field</i></b><br />Acrylic, 10" x 20"<br />$30</p></div>
+										<div class="col-4"><p><b><i>On It's Way</i></b><br />Acrylic, 16" x 10"<br />$45</p></div>
+										<div class="col-4"><p><b><i>Summer Sky</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
 
 										<div class="col-3"><span class="image fit"><img src="images/n10.JPG" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n20.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n13.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n19.JPG" alt="" /></span></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Spot of Light</i></b><br />Acrylic, 20" x 20"<br />$70</p></div>
+										<div class="col-3"><p><b><i>Field of Poppies</i></b><br />Acrylic, 12" x 12"<br />$45</p></div>
+										<div class="col-3"><p><b><i>Texture</i></b><br />Acrylic, 8" x 10"<br />$45</p></div>
+										<div class="col-3"><p><b><i>The Other Side</i></b><br />Acrylic, 12" x 12"<br />$40</p></div>
 
 										<div class="col-3"><span class="image fit"><img src="images/n14.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n16.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n17.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n31.jpeg" alt="" /></span></div>
-										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
-										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
-										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
-										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Spring</i></b><br />Acrylic, 10' x 20'<br />$40</p></div>
+										<div class="col-3"><p><b><i>A Decorative Table</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
+										<div class="col-3"><p><b><i>Fall Leaves</i></b><br />Acrylic, 10" x 20"<br />$50</p></div>
+										<div class="col-3"><p><b><i>Blossoms</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
 
 										<div class="col-2"><span class="image fit"><img src="images/n25.JPG" alt="" /></span></div>
 										<div class="col-2"><span class="image fit"><img src="images/n27.JPG" alt="" /></span></div>
 										<div class="col-2"><span class="image fit"><img src="images/n23.jpeg" alt="" /></span></div>
 										<div class="col-2"><span class="image fit"><img src="images/n28.JPG" alt="" /></span></div>
 										<div class="col-2"><span class="image fit"><img src="images/n30.JPG" alt="" /></span></div>
+										<div class="col-2"><p><b><i>Fading Flowers</i></b><br />Acrylic, 10" x 20"<br />$50</p></div>
 										<div class="col-2"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
-										<div class="col-2"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
-										<div class="col-2"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
-										<div class="col-2"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
-										<div class="col-2"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-2"><p><b><i>Winter's Here</i></b><br />Acrylic on Wood Panels, 8" x 10" (2 piece)<br />$50</p></div>
+										<div class="col-2"><p><b><i>Silvery Night</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
+										<div class="col-2"><p><b><i>Open Sky</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
 
 										<div class="col-3"><span class="image fit"><img src="images/n11.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n18.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n24.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n26.jpeg" alt="" /></span></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Contrast</i></b><br />Acrylic, 18" x 24"<br />$70</p></div>
+										<div class="col-3"><p><b><i>Uphill</i></b><br />Acrylic, 15.5" x 12"<br />$60</p></div>
+										<div class="col-3"><p><b><i>Overgrowth</i></b><br />Acrylic and Ink, 18" x 24"<br />$80</p></div>
+										<div class="col-3"><p><b><i>Calm</i></b><br />Acrylic, 8" x 10"<br />$30</p></div>
 
 										<div class="col-3"><span class="image fit"><img src="images/n9.JPG" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n15.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n12.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n21.jpeg" alt="" /></span></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
-										<div class="col-3"><p><b><i>Title</i></b><br />Acrylic, 12" x 12"<br />$</p></div>
+										<div class="col-3"><p><b><i>Designer Trees</i></b><br />Acrylic Layers, 19.5" x 19.5"<br />$80</p></div>
+										<div class="col-3"><p><b><i>Winter Wonder</i></b><br />Acrylic Layers, 20" x 20"<br />$90</p></div>
+										<div class="col-3"><p><b><i>Fall Shadows</i></b><br />Acrylic, 16" x 12"<br />$50</p></div>
+										<div class="col-3"><p><b><i>Land and Sea</i></b><br />Acrylic Layers, 20" x 20"<br />$70</p></div>
 
 										<div class="col-3"><span class="image fit"><img src="images/n1.jpg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n2.jpg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n3.jpg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n6.jpg" alt="" /></span></div>
-										<div class="col-3"><p><b><i>Sleepy Town</i></b><br />Acrylic, 20" x 10"<br />$40 SOLD</p></div>
+										<div class="col-3"><p><b><i>Sleepy Town</i></b><br />Acrylic, 10' x 20'<br />$40</p></div>
 										<div class="col-3"><p><b><i>Blustery Day</i></b><br />Acrylic, 22" x 12"<br />$120 SOLD</p></div>
-										<div class="col-3"><p><b><i>Spring Has Sprung</i></b><br />Acrylic, 20" x 10"<br />$50</p></div>
-										<div class="col-3"><p><b><i>Nature</i></b><br />Acrylic, 20" x 10"<br />$50</p></div>
+										<div class="col-3"><p><b><i>Spring has Sprung</i></b><br />Acrylic and Ink, 10" x 20"<br />$40 SOLD</p></div>
+										<div class="col-3"><p><b><i>Nature</i></b><br />Acrylic, 10" x 20"<br />$50</p></div>
 
 										<div class="col-4"><span class="image fit"><img src="images/n5.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/n7.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/n8.png" alt="" /></span></div>
-										<div class="col-4"><p><b><i>Upstream</i></b><br />Acrylic, 12" x 12"<br />$30 SOLD</p></div>
-										<div class="col-4"><p><b><i>Look Up. Way Up.</i></b><br />Acrylic, 12" x 12"<br />$50</p></div>
+										<div class="col-4"><p><b><i>Upstream</i></b><br />Acrylic, 10" x 10"<br />$20</p></div>
+										<div class="col-4"><p><b><i>Look Up, Way Up</i></b><br />Acrylic, 12" x 12"<br />$50</p></div>
 										<div class="col-4"><p><b><i>Be Patient</i></b><br />Acrylic, 12" x 12"<br />$50 SOLD</p></div>
 									</div>
 								</div>
